# MNIST_CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cu  test.cu
include/: neuralNet.cuh
include/MNIST/: mnist_read.hpp
include/layers/: affineLayer.cuh  dropoutLayer.cuh  layer.cuh  reluLayer.cuh
include/lossFunctions/: softmax.cuh
include/numC/: npFunctions.cuh  npGPUArray.cuh
include/optimisers/: adam.cuh
include/visualisations/: showImg.hpp
modules/: README.md
modules/MNIST/: README.md
modules/MNIST/include/MNIST/: readMNIST.hpp  showMNIST.hpp
modules/MNIST/src/: readMNIST.cpp  showMNIST.cpp
modules/layers/: README.md
modules/layers/include/layers/: affineLayer.cuh  dropoutLayer.cuh  layer.cuh  reluLayer.cuh
modules/layers/src/: affineLayer.cu  dropoutLayer.cu  layer.cu  reluLayer.cu
modules/lossFunctions/: README.md
modules/lossFunctions/include/lossFunctions/: softmax.cuh
modules/lossFunctions/src/: softmax.cu
modules/numC/: README.md
modules/numC/include/numC/: customKernels.cuh  npFunctions.cuh  npGPUArray.cuh  npRandom.cuh
modules/optimisers/: README.md
modules/optimisers/include/optimisers/: adam.cuh
modules/optimisers/src/: adam.cu
src/: NeuralNet.cu
src/MNIST/: mnist_read.cpp
src/layers/: affineLayer.cu  dropoutLayer.cu  reluLayer.cu
src/optimisers/: adam.cu
src/visualisations/: showImg.cpp
